@@ -101,7 +101,6 @@ privileges on the 'Rivendell' database:
      Delete
      Reload
      Super
-     Create
      Drop
      Replication Slave
      Replication Client
