@@ -7,7 +7,7 @@ Standards-Version: 4.4.1
 
 Package: aman
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, mariadb-client, libqt5sql5-mysql, qttranslations5-l10n, rsync, bzip2
+Depends: ${shlibs:Depends}, ${misc:Depends}, mariadb-client, libqt5sql5-mysql, qttranslations5-l10n, rsync, bzip2, openssh-client, openssh-server
 Description: Rivendell Server Manager System
  Aman is a package for managing a redundant pair of servers for the
  Rivendell Radio Automation System.  It includes facilities for monitoring
